Fixex mobile spacing in portfolio

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -183,7 +183,7 @@ footer h2 {
   }
 
   #portfolio .row {
-    margin-bottom: 1.5rem !important;
+    margin-bottom: 0;
   }
 
   section {
@@ -203,8 +203,8 @@ footer h2 {
     border-bottom: #1e2020 solid 1px;
   }
 
-  .portfolio__row {
-    margin-bottom: 0;
+  .portfolio__col {
+    margin-bottom: 20px;
   }
 }
 
